fix bug if menu navigation links are too longs refs 12744

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,6 +28,14 @@
     .hidden-below-600 {
         display: none;
     }
+    nav.navbar .links .item a span {
+        display: inline-block;
+        line-height: 1;
+        max-width: 100px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
 }
 @media (max-width: 340px) {
     .hidden-below-340 {
